--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
     <footer class="mt-5 p-3 text-center bg-light">
         GitHub Finder &copy;
     </footer> -->
-        <div class="container-fluid mx-0 px-0">
-            <h1 class="bg-dark text-center py-3 stylish" style="color: #efefef">
+        <div class="container-fluid mx-0 px-0 my-0 py-0">
+            <h2 class="bg-dark text-center py-2 my-0 stylish" style="color: #efefef">
                 REVE Data Lake
-            </h1>
+            </h2>
         </div>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-5 px-3">
-                    <div class="row">
+        <div class="container-fluid px-3">
+            <div class="row px-4 pt-2 pb-0 my-0" style="border: 2px solid red;">
+                <div class="col-5 px-0 py-0 my-0">
+                    <div class="row py-0 my-0">
                         <div
-                            class="col-12 boxshadow px-0"
+                            class="col-12 boxshadow"
                             id="imageHolder"
                             style="width: inherit; height: 70vh; display: flex; justify-content: center;"
                         >
@@ -69,15 +69,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 px-3">
-                    <button id="convertBtn" type="button" class="btn btn-primary">
+                <div class="col-2 px-3 py-0 my-0" style="display: flex; justify-content: center; align-items: center;">
+                    <button id="convertBtn" type="button" class="btn btn-primary" style="height: fit-content;">
                         Convert
                     </button>
                 </div>
-                <div class="col-5 px-3">
-                    <div class="row">
+                <div class="col-5 mx-0 px-0 py-0 mb-0" style="border: 2px solid green; height: fit-content;">
+                    <div class="row px-0 py-0 my-0">
                         <div
-                            class="col-12"
+                            class="col-12 px-0 py-0 my-0"
                             id="contentHolder"
                             style="height: 75vh;"
                         >
@@ -94,22 +94,19 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-5">
+                <div class="col-5" style="display: flex; justify-content: space-between;">
                     <label for="files">Select multiple files</label>
                     <input id="files" type="file" multiple="multiple" accept="image/jpeg, image/png, image/jpg">
-                    <output id="result">
                 </div>
                 <div class="col-2">
 
                 </div>
-                <div class="col-5 px-3">
+                <div class="col-5 pl-0">
                     <div
-                        class="row px-3"
+                        class="row pl-3"
                         style="
                             width: inherit;
-                            height: 75px;
                             display: flex;
-                            align-items: center;
                             justify-content: space-between;
                         "
                     >
@@ -177,7 +174,7 @@
                             </div>
                         <!-- </div> -->
                     </div>
-                    <div class="row">
+                    <div class="row pl-0 pr-3 pt-0 mt-0 mx-0">
                         <div class="col-12">
                             <textarea
                                 id="reference"
