Updated Zoom +- Feature

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         </div>
                     </div>
                     <div class="row" style="border: 0px solid red;">
-                        <div class="col-12 pr-0" style="display: flex; justify-content: space-between;">
+                        <div class="col-12 pr-0" style="display: flex; justify-content: space-between; align-items: center;">
                             <button
                                 id="prevBtn"
                                 type="button"
